opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks-common"
bug-reports:  "https://github.com/atolab/yaks-common/issues/"
dev-repo:     "git+https://github.com/atolab/yaks-common.git"
tags:         ["org:adlink-technology"]

version:"0.2.7"
license: "Apache-2.0"

build: [
  ["jbuilder" "build" "--only" "yaks-common" "--root" "." "-j" jobs "@install"]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "fmt" 
  "logs" 
  "lwt" 
  "ppx_deriving"
  "ppx_cstruct"
  "lwt_ppx"
  "apero-core" {>= "0.4.4"}
]

synopsis : "YAKS Common OCaml library"
description: """
An OCaml library used by both yaks-ocaml API and Yaks core software."""
