opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks-common"
bug-reports:  "https://github.com/atolab/yaks-common/issues/"
dev-repo:     "git+https://github.com/atolab/yaks-common.git"
tags:         ["org:adlink-technology"]

version:"0.2.7"
license: "Apache-2.0"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "fmt"
  "logs"
  "lwt"
  "ppx_deriving"
  "ppx_cstruct"
  "lwt_ppx"
  "apero-core" {>= "0.4.5"}
  "apero-time" {>= "0.4.5"}
  "zenoh-ocaml" {= "0.2.5"}
]

synopsis : "YAKS Common OCaml library"
description: """
An OCaml library used by both yaks-ocaml API and Yaks core software."""
